--- a/package.json
+++ b/package.json
@@ -39,5 +39,8 @@
     "eslint-config-next": "15.4.5",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.3.6"
+  },
+  "overrides": {
+    "react-query": "npm:@tanstack/react-query@^5.85.3"
   }
 }
